
    HDFS-9019. Adding informative message to sticky bit permission denied
    exception. (xyao)

  OPTIMIZATIONS

  BUG FIXES

    HDFS-8219. setStoragePolicy with folder behavior is different after cluster restart.
    (surendra singh lilhore via Xiaoyu Yao)

    HDFS-8542. WebHDFS getHomeDirectory behavior does not match specification.
    (Kanaka Kumar Avvaru via jghoman)

    HDFS-8055. NullPointerException when topology script is
    missing. Contributed by Anu Engineer.

    HDFS-9009. Send metrics logs to NullAppender by default. (Arpit Agarwal)

    HDFS-8885. ByteRangeInputStream used in webhdfs does not override
    available(). (Shradha Revankar via aajisaka)

    HDFS-8939. Test(S)WebHdfsFileContextMainOperations failing on branch-2.
    (Chris Nauroth via jghoman)

    HDFS-9082. Change the log level in WebHdfsFileSystem.initialize() from INFO
    to DEBUG. (Santhosh Nayak via cnauroth)

    HDFS-9128. TestWebHdfsFileContextMainOperations and
    TestSWebHdfsFileContextMainOperations fail due to invalid HDFS path on
    Windows. (cnauroth)

Release 2.7.2

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  BUG FIXES

    HDFS-8863. The remaining space check in BlockPlacementPolicyDefault is
    flawed. (Kihwal Lee via Yi Liu)

    HDFS-8995. Flaw in registration bookeeping can make DN die on
    reconnect. (Kihwal Lee via yliu)

    HDFS-6945. BlockManager should remove a block from excessReplicateMap
    and decrement ExcessBlocks metric when the block is removed.  (aajisaka)

Release 2.7.1

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  BUG FIXES

    HDFS-8595. TestCommitBlockSynchronization fails with NPE. (Arpit agarwal)

    HDFS-8576. Lease recovery should return true if the lease can be released
    and the file can be closed. (J.Andreina via szetszwo)

    HDFS-8797. WebHdfsFileSystem creates too many connections for pread. (jing9)

    HDFS-8180. AbstractFileSystem Implementation for WebHdfs. (snayak via jghoman)
